# sier2

./: .gitignore  README.md  README.rst  pyproject.toml
docs/source/: api.rst  block.rst  conf.py  config.rst  dag.rst  etc.rst  gizmo.rst  index.rst  library.rst  logging.rst  metrics.rst  tutorial-1.rst  tutorial-2.rst  tutorial_1.rst  tutorial_2.rst  tutorial_3.rst  tutorial_4.rst  util.rst
docs/source/tutorials/: tutorial_0.rst  tutorial_1.rst  tutorial_2.rst  tutorial_3.rst  tutorial_4.rst  tutorial_5.rst  tutorial_6.rst  tutorials.rst
examples/: README.rst  add_numbers.py  barchart.py  block_logging.py  compatibility.py  dag.py  dag_barchart.py  dag_dump.py  dag_exception.py  dag_stop_start.py  dag_stop_unstop.py  demo0.py  demo1.py  demo2.py  demo3.py  enabling.py  execute_args.py  flow.py  flow_barchart.py  gizmo_logging.py  glib.py  if_else.py  simple_dag.py  update.py
examples-library/: README.md  pyproject.toml
examples-library/src/block_examples/: dag_library.py  tutorial_3b.py
examples-library/src/gizmo_examples/: library.py  tutorial_3b.py
examples-library/src/sier2_examples/: dag_library.py  info.py  tutorial_3b.py
examples-panel/: README.rst  _panel_widgets.py  panel-bars.py  panel-load-bars.py  panel-logging.py  panel-or-text.py  panel-stop.py
src/gizmo/: __init__.py  __main__.py  _dag.py  _gizmo.py  _logger.py  _version.py  dag.py  gizmo.py  library.py  provided.py
src/gizmo/panel/: __init__.py  _feedlogger.py  _logger.py  _panel.py  _util.py
src/gizmo/provided/: __init__.py  dags.py  gizmos.py  info.py
src/sier2/: __init__.py  __main__.py  _block.py  _config.py  _dag.py  _library.py  _logger.py  _util.py  _version.py  debug.py
src/sier2/_panel/: _default.py
src/sier2/blocks/: __init__.py
src/sier2/dags/: __init__.py  _dags.py
src/sier2/etc/: __init__.py  _vis.py
src/sier2/panel/: __init__.py  _chart.py  _dag_chart.py  _feedlogger.py  _panel.py  _panel_util.py  _util.py
src/sier2/provided/: blocks.py  dags.py  info.py
src/sier2/shelf/: __init__.py
src/sr2/: __main__.py  _block.py
src/sr2/_panel/: _default.py
src/sr2/panel/: __init__.py  _panel.py
tests/: conftest.py  test_bag.py  test_block_class_parameters.py  test_blocks.py  test_build_dag.py  test_config.py  test_dag.py  test_dag_connections.py  test_dag_disconnect.py  test_dag_heads.py  test_dag_sort.py  test_execution_order.py  test_gizmos.py  test_library.py  test_panel.py  test_serde.py
tutorials/: tutorial-1a.py  tutorial-1b.py  tutorial-2a.py  tutorial_0a.py  tutorial_1a.py  tutorial_1b.py  tutorial_2a.py  tutorial_3a.py  tutorial_3b.py  tutorial_4a.py  tutorial_4b.py  tutorial_5a.py  tutorial_5b.py  tutorial_6a.py  tutorial_9a.py
