[tool.poetry]
name = "gizmo"
version = "0.9.0"
description = "Gizmo code dags"
authors = ["algol60 <algol60@users.noreply.github.com>"]
readme = "README.rst"
packages = [{include = "gizmo", from = "src"}]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.11"

holoviews = "^1.18.3"
panel = ">=1.4.4"
param = ">=2.1.0"

[tool.poetry.plugins."gizmo.library"]
export = "gizmo:provided"

[[tool.mypy.overrides]]
module = [
    "holoviews",
    "param"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
