[project]
name = "gizmo-examples"
version = "0.0.4"
description = "Example gizmo library"
readme = "README.md"
#authors = [
#    {name="Example author", email="author@example.com"}
#]
requires-python = ">=3.12"
dependencies = [
    "gizmo>=0.8.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["gizmo_examples"]

[project.entry-points."gizmo.library"]
export = "gizmo_examples:info"
