[project]
name = "block-examples"
version = "0.0.5"
description = "Example block library"
readme = "README.md"
#authors = [
#    {name="Example author", email="author@example.com"}
#]
requires-python = ">=3.12"
dependencies = [
    "gizmo>=0.8.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["block_examples"]

[project.entry-points."block.library"]
export = "block_examples:info"
